--- a/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/layer/layer.component.html
@@ -3,8 +3,8 @@
 	<ansyn-checkbox
 		class="regular-checkbox"
 		[id]="'checkbox' + layer?.id"
-		(checkedChange)="onCheckboxClicked($event)"
-		[checked]="isChecked">
+		(ngModelChange)="onCheckboxClicked($event)"
+		[ngModel]="isChecked">
 		{{layer?.name}}
 	</ansyn-checkbox>
 
