test: all ansyn-checkbox to ng model

--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -1,10 +1,10 @@
 <div class="enum-fields-enumerator"
 	 *ngFor="let enumMetadata of metadata && metadata.enumsFields | mapIterator | sort | showMore:isLongFiltersList ">
 
-	<!--[disabled]="enumMetadata.value.disabled"-->
 	<div class="left-side">
 
 		<ansyn-checkbox
+			[disabled]="enumMetadata.value.disabled"
 			[(ngModel)]="enumMetadata.value.isChecked"
 			(ngModelChange)="onInputClicked(enumMetadata.key)">
 			<span class="field-name" [title]="enumMetadata.key | translate">{{enumMetadata.key | translate}}</span>
