--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -21,9 +21,10 @@
 	}
 
 	.buttons {
+		line-height: 0;
 		position: absolute;
 		left: 5px;
-		top: 5px;
+		top: 6px;
 		display: flex;
 
 		button {
@@ -31,6 +32,7 @@
 			padding: 4px 6px;
 			vertical-align: middle;
 			color: white;
+			line-height: 0;
 
 			&.back-to-world-view {
 				background: black;
