--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -2,10 +2,11 @@
 	 *ngFor="let enumMetadata of metadata && metadata.enumsFields | mapIterator | sort | showMore:isLongFiltersList ">
 
 	<div class="left-side">
+
 		<ansyn-checkbox
 			[disabled]="enumMetadata.value.disabled"
-			[checked]="enumMetadata.value.isChecked"
-			(checkedChange)='onInputClicked(enumMetadata.key)'>
+			[(ngModel)]="enumMetadata.value.isChecked"
+			(ngModelChange)="onInputClicked(enumMetadata.key)">
 			<span class="field-name" [title]="enumMetadata.key | translate">{{enumMetadata.key | translate}}</span>
 		</ansyn-checkbox>
 
