tasks form (cont.) + tests now pass + another attempt to use ansyn-input ... still not nice

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -1,14 +1,13 @@
 <div class=" small-padding-left">Status</div>
 <div class="big-font wide-underline small-padding-left margin">{{taskStatus}}</div>
 
-<label>
-	<div class="label-text small-padding-left">Name</div>
-	<input
-		[(ngModel)]="taskName"
-		required
-		class="small-padding-left margin"
-	>
-</label>
+<ansyn-input
+	[(ngModel)]="taskName"
+	[required]="true"
+	name="name"
+	class="small-padding-left margin"
+	label="Name"
+></ansyn-input>
 
 <ansyn-combo-box
 	[(ngModel)]="algorithm"
