--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
@@ -29,19 +29,19 @@
 	border-bottom: 1px solid @color-weak-white;
 }
 
-label {
-	.label-text {
-		.small-font;
-	}
-	input {
-		width: 100%;
-		background-color: transparent;
-		.big-font;
-		border: none;
-		border-bottom: 1px solid @color-weak-white;
-		outline: none;
-	}
-}
+//label {
+//	.label-text {
+//		.small-font;
+//	}
+//	input {
+//		width: 100%;
+//		background-color: transparent;
+//		.big-font;
+//		border: none;
+//		border-bottom: 1px solid @color-weak-white;
+//		outline: none;
+//	}
+//}
 
 .pin {
 	display: inline-block;
