--- a/src/app/@ansyn/core/forms/file-input/file-input.component.less
+++ b/src/app/@ansyn/core/forms/file-input/file-input.component.less
@@ -1,21 +1,39 @@
-label {
-	color: white;
-	outline: none;
-	input[type='file'] {
-		display: none;
-		background: transparent;
-	}
+input[type='file'] {
+	display: none;
+	background: transparent;
 
-	span.placeholder {
-		&:focus, &:hover {
-			outline: none;
-			box-shadow: 0px 0px 1px 0px white inset;
+	+ label {
+		span.placeholder {
+			color: rgba(255, 255, 255, 0.8);
+			cursor: pointer;
+			padding: 5px 0;
+			&:hover{
+				color: white;
+			}
 		}
-		padding: 5px 0;
 	}
 
-	span.files {
+	~ span.files {
 		font-size: 13px;
-		color: rgba(255, 255, 255, 0.8);
+		color: white;
+		pointer-events: none;
 	}
+
+	&:disabled + label {
+		span.placeholder {
+			color: rgba(255, 255, 255, 0.6);
+			cursor: default;
+			&:hover{
+				color: rgba(255, 255, 255, 0.6);
+			}
+		}
+	}
+
+	&:disabled ~ span.files {
+		display: none;
+	}
+
 }
+
+
+
