fix: write value of checkbox

--- a/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/menu-items/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -5,7 +5,7 @@
 
 		<ansyn-checkbox
 			[disabled]="enumMetadata.value.disabled"
-			[(ngModel)]="enumMetadata.value.isChecked"
+			[ngModel]="enumMetadata.value.isChecked"
 			(ngModelChange)="onInputClicked(enumMetadata.key)">
 			<span class="field-name" [title]="enumMetadata.key | translate">{{enumMetadata.key | translate}}</span>
 		</ansyn-checkbox>
