--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -3,9 +3,10 @@
 
 <ansyn-input
 	[(ngModel)]="taskName"
-	[required]="true"
+	required
+	[white]="true"
 	name="name"
-	class="small-padding-left margin"
+	class="margin"
 	label="Name"
 ></ansyn-input>
 
