fix: input multiple, accept

--- a/src/app/@ansyn/core/forms/file-input/file-input.component.html
+++ b/src/app/@ansyn/core/forms/file-input/file-input.component.html
@@ -1,9 +1,8 @@
 <input [id]="id"
 	   #input
-	   name="images"
 	   type="file"
-	   accept="image/jpeg"
-	   multiple
+	   [accept]="accept"
+	   [multiple]="multiple"
 	   [disabled]="disabled"
 	   [(ngModel)]="value"
 	   (change)="change.emit($event)"/>
