--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
@@ -29,19 +29,16 @@
 	border-bottom: 1px solid @color-weak-white;
 }
 
-//label {
-//	.label-text {
-//		.small-font;
-//	}
-//	input {
-//		width: 100%;
-//		background-color: transparent;
-//		.big-font;
-//		border: none;
-//		border-bottom: 1px solid @color-weak-white;
-//		outline: none;
-//	}
-//}
+/deep/ ansyn-input#ansyn-task-name {
+	label {
+		.small-padding-left;
+		.small-font;
+	}
+	input {
+		.small-padding-left;
+		.big-font;
+	}
+}
 
 .pin {
 	display: inline-block;
