--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -14,14 +14,14 @@
 	></ansyn-input>
 
 	<ansyn-combo-box
-		[(ngModel)]="algorithm"
+		[(ngModel)]="algName"
 		required
 		name="algorithm"
 		[color]="'transparent'"
 		[placeholder]="'Select algorithm'"
 		class="margin"
 	>
-		<ansyn-combo-box-option *ngFor="let algName of algorithms" [value]="algName">
+		<ansyn-combo-box-option *ngFor="let algName of algNames" [value]="algName">
 			{{ algName }}
 		</ansyn-combo-box-option>
 	</ansyn-combo-box>
