1 Take sensor name and time estimation from config 2 Calculate time estimation

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1060,7 +1060,9 @@
   "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
   "algorithmsConfig": {
 	"matching" : {
-		"maxOverlays": 20
+		"maxOverlays": 20,
+		"timeEstimationPerOverlayInMinutes": 10,
+		"sensorNames": [ "Landsat8L1G", "Sentinel2L1C" ]
 	}
   }
 }
