Hide alg name + pass it through translation

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -373,7 +373,8 @@
     },
     "translation": {
     	"default": {
-		 	"Sentinel-2A": "Sentinel 2A"
+		 	"Sentinel-2A": "Sentinel 2A",
+		 	"alg_1": "secret name"
 	   	}
     },
     "needToUseLayerExtent": false
@@ -1059,7 +1060,7 @@
   },
   "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
   "algorithmsConfig": {
-	"matching" : {
+	"alg_1" : {
 		"maxOverlays": 20,
 		"timeEstimationPerOverlayInMinutes": 10,
 		"sensorNames": [ "Landsat8L1G", "Sentinel2L1C" ]
