--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -21,8 +21,8 @@
 		[placeholder]="'Select algorithm'"
 		class="margin"
 	>
-		<ansyn-combo-box-option *ngFor="let algName of algNames" [value]="algName">
-			{{ algName }}
+		<ansyn-combo-box-option *ngFor="let algName of algNames" [value]="algName | translate">
+			{{ algName | translate }}
 		</ansyn-combo-box-option>
 	</ansyn-combo-box>
 
