Hide alg name + pass it through translation (cont.)

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -21,7 +21,7 @@
 		[placeholder]="'Select algorithm'"
 		class="margin"
 	>
-		<ansyn-combo-box-option *ngFor="let algName of algNames" [value]="algName | translate">
+		<ansyn-combo-box-option *ngFor="let algName of algNames" [value]="algName">
 			{{ algName | translate }}
 		</ansyn-combo-box-option>
 	</ansyn-combo-box>
