--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -15,6 +15,7 @@
 
 	<ansyn-combo-box
 		[(ngModel)]="algName"
+		(ngModelChange)="checkForErrors()"
 		required
 		name="algorithm"
 		[color]="'transparent'"
@@ -82,7 +83,7 @@
 	<div class="margin">The results will be available for download when the task is completed</div>
 
 	<div class="run-bar margin">
-		<button ansynButton [disabled]="f.invalid">Run Task</button>
+		<button ansynButton [disabled]="f.invalid || hasError()">Run Task</button>
 		<div *ngIf="currentAlgorithm">Time Estimation: {{timeEstimation}}m</div>
 	</div>
 
