--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -33,7 +33,7 @@
 
 	<div class=" small-padding-left margin">
 		<span>Pin Location</span>
-		<span class="pin" (click)="showError('Oyoyoy!')"></span>
+		<span class="pin" (click)="startDrawMode()"></span>
 	</div>
 
 	<div class="big-font wide-underline margin"></div>
