form: implementing select location

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -33,7 +33,7 @@
 
 	<div class=" small-padding-left margin">
 		<span>Pin Location</span>
-		<span class="pin" (click)="startDrawMode()"></span>
+		<span class="pin" [class.done]="region" (click)="startDrawMode()"></span>
 	</div>
 
 	<div class="big-font wide-underline margin"></div>
@@ -83,7 +83,7 @@
 	<div class="margin">The results will be available for download when the task is completed</div>
 
 	<div class="run-bar margin">
-		<button ansynButton [disabled]="f.invalid || hasError()">Run Task</button>
+		<button ansynButton [disabled]="f.invalid || hasError() || !region">Run Task</button>
 		<div *ngIf="currentAlgorithm">Time Estimation: {{timeEstimation}}m</div>
 	</div>
 
