--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.less
@@ -29,6 +29,10 @@
 	border-bottom: 1px solid @color-weak-white;
 }
 
+.invisible {
+	visibility: hidden;
+}
+
 /deep/ ansyn-input#ansyn-task-name {
 	label {
 		.small-padding-left;
