CR fixes - filter by sensor names

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1064,13 +1064,13 @@
 	"alg_1" : {
 		"maxOverlays": 20,
 		"timeEstimationPerOverlayInMinutes": 10,
-		"sensorNames": [ "Landsat8L1G", "Sentinel2L1C" ],
+		"sensorNames": [ "Sentinel-2A", "Sentinel-2B" ],
 		"regionLengthInMeters": 200
 	},
 	"alg_2" : {
 		"maxOverlays": 2,
 		"timeEstimationPerOverlayInMinutes": 20,
-		"sensorNames": [ "Landsat8L1G" ],
+		"sensorNames": [ "Sentinel-2A" ],
 		"regionLengthInMeters": 100
 	}
   }
