CR fixes - draw rectangle

--- a/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
+++ b/src/app/@ansyn/menu-items/algorithms/components/tasks-form/tasks-form.component.html
@@ -15,7 +15,7 @@
 
 	<ansyn-combo-box
 		[(ngModel)]="algName"
-		(ngModelChange)="checkForErrors()"
+		(ngModelChange)="onAlgorithmChange()"
 		required
 		name="algorithm"
 		[color]="'transparent'"
