--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.html
@@ -45,13 +45,13 @@
 				placeholder="*Sharing Options"
 				[(ngModel)]="sharing">
 
-				<ansyn-combo-box-option value="Public">
-					Public
+				<ansyn-combo-box-option value="Public" *ngFor="let share of sharingOptions">
+					{{share}}
 				</ansyn-combo-box-option>
 
-				<ansyn-combo-box-option value="Private" [disabled]="true">
-					Private
-				</ansyn-combo-box-option>
+				<!--<ansyn-combo-box-option value="Private" [disabled]="true">-->
+					<!--Private-->
+				<!--</ansyn-combo-box-option>-->
 
 			</ansyn-combo-box>
 		</div>
@@ -64,25 +64,8 @@
 				name="files"
 				placeholder="*Choose file"
 				[(ngModel)]="fileInputValue"
-				(change)="files = $event.target.files"
-			>
-
+				(change)="files = $event.target.files">
 			</ansyn-file-input>
-			<!--<label tabindex="0">-->
-
-				<!--<input required-->
-					   <!--name="images"-->
-					   <!--type="file"-->
-					   <!--accept="image/jpeg"-->
-					   <!--multiple-->
-					   <!--[(ngModel)]="fileInputValue"-->
-					   <!--#input-->
-					   <!--(change)="files = $event.target.files"/>-->
-				<!--*Choose file-->
-				<!--<p *ngIf="files">-->
-					<!--{{ files.length > 1 ? files.length + ' files' : fileInputValue }}-->
-				<!--</p>-->
-			<!--</label>-->
 		</div>
 
 		<div class="form-field">
