CR fixes - draw rectangle

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -374,8 +374,8 @@
     "translation": {
     	"default": {
 		 	"Sentinel-2A": "Sentinel 2A",
-		 	"alg_1": "secret name 1",
-		 	"alg_2": "secret name 2"
+		 	"alg_1": "name 1",
+		 	"alg_2": "name 2"
 	   	}
     },
     "needToUseLayerExtent": false
