--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1059,6 +1059,7 @@
   },
   "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
   "uploadsConfig": {
+  	  "apiUrl": "http://localhost:3000/upload",
       "sensorTypes": [ "UAV", "Satellite", "Aircraft", "Ballon", "Kite" ],
       "sensorNames": ["AAAA", "BBBB"],
       "defaultSensorType": "UAV",
