--- a/src/app/@ansyn/core/less/z-index-globals.less
+++ b/src/app/@ansyn/core/less/z-index-globals.less
@@ -7,6 +7,7 @@
 @z-index-overlays-display-mode-component: 2;
 @z-index-tooltip-after: 2;
 @z-index-case-menu: 2;
+@z-index-task-menu: 2;
 @z-index-annotations-control: 2;
 @z-index-image-processing-control: 2;
 @z-index-tools-tooltiptext: 2;
