feat: modal for custom sensor name

--- a/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
+++ b/src/app/@ansyn/menu-items/cases/components/save-case/save-case.component.html
@@ -5,8 +5,8 @@
 
 	<form #f="ngForm" class="save-case-form" (ngSubmit)="onSubmitCase()">
 		<ansyn-input
-			#nameInput
 			[(ngModel)]="caseName"
+			select
 			name="name"
 			[required]="true"
 			label="Name">
