--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.html
@@ -2,8 +2,8 @@
 	<form #f="ngForm" class="edit-layer-form"
 		  (ngSubmit)="layer ? editLayer(layerName.value) : addLayer(layerName.value)">
 		<ansyn-input
-			#layerName
 			[ngModel]="layer?.name"
+			select
 			name="name"
 			label="Name">
 		</ansyn-input>
