--- a/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
+++ b/src/app/@ansyn/menu-items/uploads/components/uploads/uploads.component.less
@@ -6,7 +6,7 @@
 	color: white;
 	&:extend(.default-menu-item);
 	position: relative;
-	form {
+	form.upload-form {
 		margin: 50px;
 		position: relative;
 		div.form-field {
