--- a/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/core/forms/combo-box/combo-box.component.html
@@ -1,5 +1,6 @@
 <div class="combo-container" [ngClass]="[direction, color]">
 	<button ansynComboBoxTrigger
+			type="button"
 			[disabled]="disabled"
 			[isActive]="optionsVisible"
 			[attr.tooltip-value]="comboBoxToolTipDescription || null"
