--- a/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/data-layers-modals.component.html
+++ b/src/app/@ansyn/menu-items/layers-manager/components/data-layers-modals/data-layers-modals.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="modal$ | async as modal">
 
-	<ansyn-modal [show]="modal.type !== SelectedModalEnum.none" (showChange)="closeModal()" [ngSwitch]="modal.type">
+	<ansyn-modal [show]="modal.type !== SelectedModalEnum.none" (showChange)="!$event && closeModal()" [ngSwitch]="modal.type">
 
 		<ansyn-download-layers
 			*ngSwitchCase="SelectedModalEnum.download"
